test/asm/command-line-symbols.err
error: command-line-symbols.asm(3):
    'FOO' already defined at <command-line>
error: Assembly aborted (1 error)!
