test/asm/command-line-symbols.asm
assert !strcmp("{FOO}", "hello")
assert !strcmp("{DEFINED}", "1")
def FOO equ 42
